tests/ui/traits/copy-guessing.stderr
error[E0282]: type annotations needed for `Option<_>`
  --> $DIR/copy-guessing.rs:20:9
   |
LL |     let n = None;
   |         ^   ---- type must be known at this point
   |
help: consider giving `n` an explicit type, where the type for type parameter `T` is specified
   |
LL |     let n: Option<T> = None;
   |          +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
